--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.Badgerparking"
         tools:targetApi="31">
         <activity
+            android:name=".SetTimerActivity"
+            android:exported="false" />
+        <activity
             android:name=".AnnouncementsActivity"
             android:exported="false" />
         <activity
