--- a/build.gradle
+++ b/build.gradle
@@ -1,47 +1,3 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application'
-}
-
-android {
-    namespace 'com.cs407.badgerparking'
-    compileSdk 33
-
-    defaultConfig {
-        applicationId "com.cs407.badgerparking"
-        minSdk 26
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-}
-
-dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.libraries.places:places:3.3.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.google.android.gms:play-services-maps:18.2.0'
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.0'
-    implementation 'com.google.maps.android:android-maps-utils:2.2.5'
-
-
-}
+id 'com.android.application' version '8.1.2' apply false
