--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.9.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.0'
+    implementation 'com.google.maps.android:android-maps-utils:2.2.5'
 
 }
